--- a/home/css/style.css
+++ b/home/css/style.css
@@ -62,7 +62,7 @@ span {
 	align-content: center;
 	flex-wrap: wrap;
 	text-decoration: none;
-	color: #058110;
+	color: #038f21;
 	justify-content: center;
 }
 .bottom ul li img{
